<resources>
    <string name="app_name">SpaceX_fromLugovaya</string>

    <string name="rocket_height">Высота</string>
    <string name="rocket_diameter">Диаметр</string>
    <string name="rocket_weight">Масса</string>
    <string name="rocket_payload">Полезная нагрузка для id «leo» (низкой околоземной орбиты), </string>

    <string name="first_launch">Первый запуск</string>
    <string name="rocket_country">Страна</string>
    <string name="rocket_launch_cost">Стоимость запуска</string>

    <string name="first_stage">ПЕРВАЯ СТУПЕНЬ</string>
    <string name="second_stage">ВТОРАЯ СТУПЕНЬ</string>
    <string name="rocket_number_of_engines">Количество двигателей</string>
    <string name="rocket_fuel_quantity">Количество топлива</string>
    <string name="rocket_combustion_time">Время сгорания</string>
    <string name="view_launches">Посмотреть запуски</string>

    <string name="settings">Настройки</string>
    <string name="close">Закрыть</string>
    <string name="back">Назад</string>

    <string name="loading">Загрузка</string>
    <string name="error">Ошибка</string>

    <string name="units_m">m</string>
    <string name="units_ft">ft</string>
    <string name="units_kg">kg</string>
    <string name="units_lb">lb</string>
    <string name="units_ton">ton</string>
    <string name="units_sec">sec</string>
</resources>