<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black">

    <TextView
        android:id="@+id/rocket_stage_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="ПЕРВАЯ СТУПЕНЬ" />

    <TextView
        android:id="@+id/rocket_number_of_engines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rocket_stage_num"
        android:text="@string/rocket_number_of_engines"
        tools:text="@string/rocket_number_of_engines" />

    <TextView
        android:id="@+id/rocket_number_of_engines_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/rocket_number_of_engines"
        tools:text="27" />

    <TextView
        android:id="@+id/rocket_fuel_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/rocket_number_of_engines"
        app:layout_constraintTop_toBottomOf="@+id/rocket_number_of_engines"
        android:text="@string/rocket_fuel_quantity"
        tools:text="Количество топлива" />

    <TextView
        android:id="@+id/rocket_fuel_quantity_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/rocket_number_of_engines_value"
        app:layout_constraintTop_toTopOf="@id/rocket_fuel_quantity"
        tools:text="308,6" />

    <TextView
        android:id="@+id/rocket_fuel_quantity_units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/light_gray"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/rocket_fuel_quantity_value"
        app:layout_constraintTop_toTopOf="@id/rocket_fuel_quantity_value"
        tools:text="ton" />

    <TextView
        android:id="@+id/rocket_combustion_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingBottom="32dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/rocket_fuel_quantity"
        app:layout_constraintTop_toBottomOf="@+id/rocket_fuel_quantity"
        android:text="@string/rocket_combustion_time"
        tools:text="@string/rocket_combustion_time" />

    <TextView
        android:id="@+id/rocket_combustion_time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/rocket_fuel_quantity_value"
        app:layout_constraintTop_toTopOf="@id/rocket_combustion_time"
        tools:text="593" />

    <TextView
        android:id="@+id/rocket_combustion_time_units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/light_gray"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/rocket_combustion_time_value"
        app:layout_constraintTop_toTopOf="@id/rocket_combustion_time_value"
        tools:text="sec" />

</androidx.constraintlayout.widget.ConstraintLayout>