<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/default_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/backgroundpic"
        android:scaleType="centerCrop" />


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_default"
        android:layout_width="match_parent"
        android:layout_height="248dp"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.SpaceX_fromLugovaya">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_default"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_appbar_default"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/backgroundpic"
                app:layout_anchor="@+id/appbar_default"
                app:layout_anchorGravity="center"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_default"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/background_information_default"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/rocket_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="48dp"
                android:text="Falcon Heavy"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Falcon Heavy" />

            <ImageButton
                android:id="@+id/settings_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="32dp"
                android:background="@color/black"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_settings"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/rocket_name" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rocket_options_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rocket_name"
                tools:listitem="@layout/rocket_options_item" />

            <TextView
                android:id="@+id/rocket_first_launch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/first_launch"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/rocket_name"
                app:layout_constraintTop_toBottomOf="@+id/rocket_options_recyclerview"
                tools:text="@string/first_launch" />

            <TextView
                android:id="@+id/rocket_first_launch_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7 февраля, 2018"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/rocket_options_recyclerview"
                app:layout_constraintTop_toTopOf="@id/rocket_first_launch"
                tools:text="7 февраля, 2018" />

            <TextView
                android:id="@+id/rocket_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/rocket_country"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/rocket_first_launch"
                app:layout_constraintTop_toBottomOf="@+id/rocket_first_launch"
                tools:text="@string/rocket_country" />

            <TextView
                android:id="@+id/rocket_country_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="США"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/rocket_first_launch_value"
                app:layout_constraintTop_toTopOf="@id/rocket_country"
                tools:text="США" />

            <TextView
                android:id="@+id/rocket_launch_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/rocket_launch_cost"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/rocket_country"
                app:layout_constraintTop_toBottomOf="@+id/rocket_country"
                tools:text="@string/rocket_launch_cost" />

            <TextView
                android:id="@+id/rocket_launch_cost_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$90 млн"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/rocket_country_value"
                app:layout_constraintTop_toTopOf="@id/rocket_launch_cost"
                tools:text="$90 млн" />

            <TextView
                android:id="@+id/rocket_stage_num_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/first_stage"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rocket_launch_cost"
                tools:text="@string/first_stage" />

            <TextView
                android:id="@+id/rocket_number_of_engines_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/rocket_number_of_engines"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/rocket_stage_num_first"
                app:layout_constraintTop_toBottomOf="@id/rocket_stage_num_first"
                tools:text="@string/rocket_number_of_engines" />

            <TextView
                android:id="@+id/rocket_number_of_engines_value_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="64dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/rocket_number_of_engines_first"
                android:text="27"
                tools:text="27" />

            <TextView
                android:id="@+id/rocket_fuel_quantity_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/rocket_fuel_quantity"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/rocket_number_of_engines_first"
                app:layout_constraintTop_toBottomOf="@+id/rocket_number_of_engines_first"
                tools:text="@string/rocket_fuel_quantity" />

            <TextView
                android:id="@+id/rocket_fuel_quantity_value_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/rocket_number_of_engines_value_first"
                app:layout_constraintTop_toTopOf="@id/rocket_fuel_quantity_first"
                android:text="308,6"
                tools:text="308,6" />

            <TextView
                android:id="@+id/rocket_fuel_quantity_units_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/light_gray"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/rocket_fuel_quantity_value_first"
                app:layout_constraintTop_toTopOf="@id/rocket_fuel_quantity_value_first"
                android:text="@string/units_ton"
                tools:text="@string/units_ton" />

            <TextView
                android:id="@+id/rocket_combustion_time_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/rocket_combustion_time"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/rocket_fuel_quantity_first"
                app:layout_constraintTop_toBottomOf="@+id/rocket_fuel_quantity_first"
                tools:text="@string/rocket_combustion_time" />

            <TextView
                android:id="@+id/rocket_combustion_time_value_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/rocket_fuel_quantity_value_first"
                app:layout_constraintTop_toTopOf="@id/rocket_combustion_time_first"
                android:text="593"
                tools:text="593" />

            <TextView
                android:id="@+id/rocket_combustion_time_units_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/light_gray"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/rocket_combustion_time_value_first"
                app:layout_constraintTop_toTopOf="@id/rocket_combustion_time_value_first"
                android:text="@string/units_sec"
                tools:text="@string/units_sec" />

            <TextView
                android:id="@+id/rocket_stage_num_second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/second_stage"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rocket_combustion_time_first"
                tools:text="@string/second_stage" />

            <TextView
                android:id="@+id/rocket_number_of_engines_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/rocket_number_of_engines"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/rocket_stage_num_second"
                app:layout_constraintTop_toBottomOf="@id/rocket_stage_num_second"
                tools:text="@string/rocket_number_of_engines" />

            <TextView
                android:id="@+id/rocket_number_of_engines_value_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="64dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/rocket_number_of_engines_second"
                android:text="27"
                tools:text="27" />

            <TextView
                android:id="@+id/rocket_fuel_quantity_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/rocket_fuel_quantity"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/rocket_number_of_engines_second"
                app:layout_constraintTop_toBottomOf="@+id/rocket_number_of_engines_second"
                tools:text="@string/rocket_fuel_quantity" />

            <TextView
                android:id="@+id/rocket_fuel_quantity_value_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/rocket_number_of_engines_value_second"
                app:layout_constraintTop_toTopOf="@id/rocket_fuel_quantity_second"
                android:text="308,6"
                tools:text="308,6" />

            <TextView
                android:id="@+id/rocket_fuel_quantity_units_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/light_gray"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/rocket_fuel_quantity_value_second"
                app:layout_constraintTop_toTopOf="@id/rocket_fuel_quantity_value_second"
                android:text="@string/units_ton"
                tools:text="@string/units_ton" />

            <TextView
                android:id="@+id/rocket_combustion_time_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingBottom="32dp"
                android:text="@string/rocket_combustion_time"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/rocket_fuel_quantity_second"
                app:layout_constraintTop_toBottomOf="@+id/rocket_fuel_quantity_second"
                tools:text="@string/rocket_combustion_time" />

            <TextView
                android:id="@+id/rocket_combustion_time_value_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/rocket_fuel_quantity_value_second"
                app:layout_constraintTop_toTopOf="@id/rocket_combustion_time_second"
                android:text="593"
                tools:text="593" />

            <TextView
                android:id="@+id/rocket_combustion_time_units_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/light_gray"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/rocket_combustion_time_value_second"
                app:layout_constraintTop_toTopOf="@id/rocket_combustion_time_value_second"
                android:text="@string/units_sec"
                tools:text="@string/units_sec" />

            <Button
                android:id="@+id/view_launches_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/background_rocket_options_item"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/view_launches"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/rocket_launch_cost_value"
                app:layout_constraintStart_toStartOf="@+id/rocket_launch_cost"
                app:layout_constraintTop_toBottomOf="@+id/rocket_combustion_time_second" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>